# ebilab

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  architecture.md  mypy.ini  pyproject.toml  r_continuous_new.py  random_walk_new.py  requirements.txt  ruff.toml  setup.py  test_logger_ui.py
.claude/: settings.json
.claude/commands/: do-todo.md
.github/workflows/: ci.yaml  release.yaml
docs/: Makefile  requirements.txt
docs/source/: changelog-v2.0.0-pre.rst  changelog-v3.0.0-pre.md  changelog.md  changelog.rst  conf.py  index.rst  installation.rst  migration-v2-to-v3.md  modules.rst
docs/source/api/: ebilab.analysis.rst  ebilab.api.rst  ebilab.experiment.devices.rst  ebilab.experiment.devices.visa.rst  ebilab.experiment.rst  ebilab.gui.rst  ebilab.project.rst  ebilab.rst  ebilab.visa.rst  index.rst
docs/source/locale/en/LC_MESSAGES/: api.po  changelog.po  index.po  installation.po  modules.po  tutorial.po
docs/source/tutorial/: analysis.rst  experiment.rst  experiment_device.rst  version.rst
ebilab/: __init__.py  _cli.py  cli.py  project.py
ebilab/analysis/: __init__.py  _actions.py  _preprocess.py  _process.py  paths.py  preprocess.py  process_util.py
ebilab/analysis2/: __init__.py  base.py  decorators.py  manifest.py  options.py  plotter.py  process.py  project.py  subproject.py  view.py
ebilab/analysis2/tests/: test_options.py  test_plotter.py
ebilab/analysis2/ui/: clipboard.py  view.py
ebilab/api/: __init__.py  experiment.py  fields.py  plotting.py
ebilab/core/: __init__.py  data_saver.py  event.py  history.py  service.py  settings.py  video_recorder.py
ebilab/data/project-template/: .gitignore
ebilab/experiment/: __init__.py  _core.py  _experiment_controller.py  _experiment_manager.py  _ui_tkinter.py  core.py  gui.py  options.py  protocol.py  util.py
ebilab/experiment/devices/: __init__.py  visa.py
ebilab/experiment/devices/_visa/: A707.py  E4980.py  K34411A.py
ebilab/gui/: __init__.py  controller.py  view.py
ebilab/visa/: __init__.py  manager.py
ebilab/visa/devices/: A707.py  E4980.py  K34411A.py  K34465A.py
sample/: README.md  capture.py  cont_r.py  do_nothing.py  experiment.py  gui.py  multimeter.py  new_interface.py  r_continuous.py  raise_error.py  random-walk.py  random_walk.py  sleep.py  voltage.py
sample/recipes/: ctx-sleep.py  do-nothing.py  raise-error.py  random-walk.py
tests/: test_paths.py
